css/style.css
/* Add Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Nunito:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200&family=Poppins:wght@300;400;500;600;700;800&family=Ubuntu:wght@300;400;500;700&display=swap");

/* Variables Start */
:root {
  /* Theme Colors */
  --theme-1-color: #18ffff;
  --theme-2-color: #ff0000;
  --theme-3-color: #05ff00;
  --theme-4-color: #0500ff;
  --theme-5-color: #ff5c00;

  /* Active Theme */
  --active-theme-color: var(--active-theme, var(--theme-1-color));

  /* Light Mode */
  --pure-white: #fff;
  --l-primary-bg: #e1ebee78;
  --l-secondary-bg: var(--pure-white);
  --l-dark-font-color: #161617;
  --l-light-font-color: #414144;
  --l-one-mode-shadow: #00000014;
  --l-two-mode-shadow: rgba(0, 0, 0, 0.064);
  --l-border-color: rgba(128, 128, 128, 0.176);

  /* Dark Mode */
  --pure-black: #000;
  --d-secondary-bg: #161617;
  --d-primary-bg: var(--pure-black);
  --d-white-font-color: #fff;
  --d-light-font-color: #e1ebee78;
  --d-one-mode-shadow: transparent;
  --d-two-mode-shadow: var(--active-theme-color);
  --d-border-color: #ada2a2b8;

  /* Theme Fonts */
  --font-family-1: "Poppins", sans-serif;
  --font-family-2: "Poppins", sans-serif;

  /* Padding */
  --pad-inline: 1.8rem;
  --pad-block: 4.5rem;
}
/* Variables End */

/* Reset Default Properties Start */
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

::-webkit-scrollbar {
  width: 0.8rem;
}

::-webkit-scrollbar-track {
  background-color: var(--active-dark-font-color);
}

::-webkit-scrollbar-thumb {
  background-color: var(--active-theme-color);
}

html {
  font-size: 62.5%;
  /* Now 1rem = 1em = 10px */

  overflow-x: hidden;
  scroll-behavior: smooth;
}

body {
  overflow-x: hidden;
  font-family: var(--font-family-2);
}

/* Reset Default Properties End */

/* Common Properties to Frequently Used Elements Start */
body {
  /* Active or Default Mode (Dark Mode)  */
  --active-pure-color: var(--pure-black);
  --active-primary-bg: var(--d-primary-bg);
  --active-secondary-bg: var(--d-secondary-bg);
  --active-dark-font-color: var(--d-white-font-color);
  --active-light-font-color: var(--d-light-font-color);
  --active-one-mode-shadow: var(--d-one-mode-shadow);
  --active-border-color: var(--d-border-color);
  --active-two-mode-shadow: var(--d-two-mode-shadow);
}

a {
  text-decoration: none;
  display: inline-block;
  font-family: var(--font-family-2);
  transition: all 0.3s linear;
}

li {
  list-style-type: none;
  font-family: var(--font-family-2);
}

button {
  border: none;
  cursor: pointer;
  font-size: 1.5rem;
  font-weight: 500;
  letter-spacing: 1px;
  font-family: var(--font-family-2);
  transition: all 0.3s linear;
  background-color: transparent;
}

input,
textarea {
  outline: none;
}

img {
  max-width: 100%;
  width: 100%;
  display: inline-block;
  -o-object-fit: cover;
  object-fit: cover;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-family-1);
  line-height: 1.4;
  text-transform: capitalize;
  font-weight: 600;
}

h1 {
  letter-spacing: 1.2px;
  word-spacing: 3px;
}

p {
  font-family: var(--font-family-2);
  line-height: 1.6;
  font-size: 1.6rem;
}
/* Common Properties to Frequently Used Elements End */

/* Actual Document Styling Start */

/* Aside Nav Start */
.aside-nav {
  width: 100%;
  height: 100vh;
  background-color: var(--active-secondary-bg);
  border-right: 0.2rem solid var(--active-border-color);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
  transform: translateX(-100%);
  transition: all 0.4s linear;
}

.aside-nav.show-navbar {
  transform: translateX(0rem);
}

.aside-nav nav {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  flex-wrap: nowrap;
  position: relative;
  gap: 6rem;
}

/* Logo Start */
.logo-box {
  position: relative;
  gap: 0.7rem;
}

.logo-box img {
  width: 5rem;
  background-color: var(--active-theme-color);
  border-radius: 50%;
}

.logo-box h2 {
  color: var(--active-dark-font-color);
  font-size: 2.8rem;
  text-transform: uppercase;
  font-weight: 500;
}

/* Aside Nav Links Start */
.aside-nav-links {
  gap: 1.3rem;
}

.aside-nav-links li a {
  width: 15rem;
  padding: 1.4rem;
  font-size: 1.6rem;
  letter-spacing: 0.3px;
  font-weight: 600;
  color: var(--active-dark-font-color);
  border: 1px solid var(--active-border-color);
  border-left: 0.6rem solid var(--active-dark-font-color);
  background-color: var(--active-primary-bg);
  position: relative;
  z-index: 1;
}

.aside-nav-links li a::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  background-color: var(--active-theme-color);
  width: 0;
  transition: all 0.3s linear;
  z-index: -1;
}

@media (hover: hover) {
  .aside-nav-links li a:hover::before {
    width: 100%;
  }

  .aside-nav-links li a.active-nav-link::before {
    width: 100%;
  }
}

.aside-nav-links li a i {
  padding-right: 1rem;
}
/* Aside Nav Links End */

/* Aside Nav End */

/* Pages Container Start  */
.pages-container {
  background-color: var(--active-primary-bg);
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.pages-container .page {
  width: 100%;
  height: 100%;
  background-color: var(--active-primary-bg);
  position: absolute;
  top: 0;
  left: 0;
  transform: translateX(100%);
  transition: all 0.4s linear;
  overflow-x: hidden;
  overflow-y: auto;
}

.pages-container .page.active-page {
  transform: translateX(0);
}

/* Theme Change Box Start */
.theme-change-box {
  gap: calc(var(--pad-inline) + 5px);
  position: fixed;
  z-index: 100;
  right: 0;
  top: calc(var(--pad-block) + 5rem);
  transition: right 0.8s linear;
}

.theme-change-box.change-right {
  right: var(--pad-inline);
}

.theme-change-icons {
  gap: 1.2rem;
  position: relative;
}
/* ... */

